fix project title size on mobile

--- a/src/Components/Pages/Projects/Projects.css
+++ b/src/Components/Pages/Projects/Projects.css
@@ -33,8 +33,4 @@
 		margin: 60px auto;
 		padding-bottom: 60px;
 	}
-
-	h1 {
-		font-size: 2.5rem;
-	}
 }
